refactor build label

--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -3,8 +3,8 @@
   "logoText": "goctl 网页端",
   "menuWelcome": "欢迎来到 goctl web",
   "api": "API",
-  "builder": "构造器",
-  "builderPanelTitle": "构造器",
+  "builder": "接口设计",
+  "builderPanelTitle": "接口设计",
   "apiPanelTitle": "goctl API",
   "notFoundDescription": "很抱歉，你访问的网页不存在！",
   "backHome": "返回首页",
