--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -20,6 +20,7 @@
   "formJwtTitle": "JwtStatus",
   "formJWTTips": "Whether the route has JWT authentication enabled",
   "formPrefixTitle": "RoutePrefix",
+  "formPrefixTooltip": "Routing prefixes must begin with/and a letter, followed by any combination of letters, numbers, and char -, looping in sequence, such as /abc,/abc-123,/abc123-bcd",
   "formMiddlewareTips": "Middleware names must satisfy the Golang ID naming convention, and multiple middleware are separated by commas",
   "formGroupTitle": "GroupName",
   "formTimeoutTitle": "Timeout",
@@ -43,10 +44,29 @@
   "formRequestBodyFieldNameTooltip": "Field name is same to struct tag",
   "formRequestBodyFieldOptionalTitle": "Optional",
   "formRequestBodyFieldDefaultTitle": "DefaultValue",
+  "formRequestBodyTagTemplateTitle": "TagTemplate",
+  "formRequestBodyTagTemplateModalTitle": "Tag Template Detail",
+  "formLabelDetail": "Detail",
+  "tagModalContent": "Label templates can easily generate personalized labels. Currently, the template supports the following variables:",
+  "tagTableHeaderFieldName": "Name",
+  "tagTableHeaderFieldType": "Type",
+  "tagTableHeaderFieldDesc": "Description",
+  "tagTableTagDescName": "Tag name",
+  "tagTableTagTypeName": "Tag Type, json|path|form",
+  "tagTableTagTypeLabel": "Tag Type",
+  "tagTableDescTagOptional": "Field optional",
+  "tagTableDescTagDefaultValue": "The default value",
+  "tagTableDescTagCheckEnum": "Is it an enumeration or not",
+  "tagTableDescTagEnumValue": "Enumeration value",
+  "tagTableDescTagRangeValue": "Number range",
+  "tagModalTry": "Try",
+  "tagModalCopy": "Copy tag template",
+  "formRequestBodyTagTemplatePlaceholder": "json:\"{{.name}}{{if .optional}},optional{{end}}{{if .defaultValue}},default={{.defaultValue}}{{end}}{{if .checkEnum}}{{if .enumValue}},options={{.enumValue}}{{end}}{{else}}{{if .rangeValue}},{{.rangeValue}}{{end}}{{end}}\"",
+  "formRequestBodyTagTemplateTooltip": "Label template, which can override the built-in label template rules. The template does not need to be wrapped. Just fill in the text template in \". Click the icon on the right to view the details.",
   "formRequestBodyFieldEnumTitle": "EnumerationValues",
   "formRequestBodyFieldEnumTooltip": "Enumeration values, multiple divided by vertical line |",
   "formRequestBodyFieldRangeTitle": "NumberRange",
-  "formRequestBodyFieldRangeTooltip": "Number range enable for number type",
+  "formRequestBodyFieldRangeTooltip": "Number range enable for number type, -1 is infinity.",
   "formRequestBodyFieldBtnAdd": "Add Request Field",
   "formRequestBodyFieldBtnImport": "Import from json text",
   "formResponseBodyModelTitle": "Response JSON Text",
@@ -61,5 +81,12 @@
   "btnCopyTips": "Copied",
   "btnBuild": "Build",
   "tooltipFullScreen": "expand to fullscreen",
-  "buildSuccess": "build success"
+  "buildSuccess": "build success",
+  "siderFooterFeedback": "feedback",
+  "siderFooterDoc": "official document",
+  "siderFooterLocale": "language",
+  "menuTitle": "File",
+  "menuItemOpen": "Open...",
+  "menuItemSave": "Download...",
+  "btnClose": "Close"
 }
