--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -58,9 +58,9 @@
   "tagTableTagTypeLabel": "标签类型",
   "tagTableDescTagOptional": "字段是否可选",
   "tagTableDescTagDefaultValue": "默认值",
-  "tagTableDescTagCheckEnum": "是否为枚举",
+  "tagTableDescTagIsNumber": "是否为数值",
   "tagTableDescTagEnumValue": "枚举值",
-  "tagTableDescTagRangeValue": "数据范围表达式",
+  "tagTableDescTagRangeValue": "数据范围表达式，仅对数值类型有效",
   "tagModalTry": "试一试",
   "tagModalCopy": "复制模板",
   "formRequestBodyFieldEnumTitle": "枚举值",
