Support file save&import (#5)
Support file save&import

--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -20,6 +20,7 @@
   "formJwtTitle": "是否开启JWT",
   "formJWTTips": "路由是否启用 jwt 验证",
   "formPrefixTitle": "路由前缀",
+  "formPrefixTooltip": "路由前缀，必须以/和字母开头，后接任意字母，数字，横杠的组合，依次循环，如 /abc、/abc-123、/abc123-bcd",
   "formMiddlewareTips": "中间件名称必须满足 Golang ID 命名规则，多个中间件以英文逗号,分割",
   "formGroupTitle": "分组名称",
   "formTimeoutTitle": "超时时长",
@@ -43,10 +44,29 @@
   "formRequestBodyFieldNameTooltip": "字段名称等于结构体中的 tag",
   "formRequestBodyFieldOptionalTitle": "是否可选",
   "formRequestBodyFieldDefaultTitle": "默认值",
+  "formRequestBodyTagTemplateTitle": "标签模板",
+  "formRequestBodyTagTemplateModalTitle": "标签模板详情",
+  "formLabelDetail": "详情",
+  "formRequestBodyTagTemplatePlaceholder": "json:\"{{.name}}{{if .optional}},optional{{end}}{{if .defaultValue}},default={{.defaultValue}}{{end}}{{if .checkEnum}}{{if .enumValue}},options={{.enumValue}}{{end}}{{else}}{{if .rangeValue}},{{.rangeValue}}{{end}}{{end}}\"",
+  "formRequestBodyTagTemplateTooltip": "标签模板，可以覆盖内置的标签模板规则，模板无需``包裹，填``内的文本模板即可，点击右侧图标查看详情",
+  "tagModalContent": "标签模板可以方便生成个性化标签，目前模板支持以下变量：",
+  "tagTableHeaderFieldName": "字段名称",
+  "tagTableHeaderFieldType": "字段类型",
+  "tagTableHeaderFieldDesc": "字段说明",
+  "tagTableTagDescName": "标签名称",
+  "tagTableTagTypeName": "标签类型，json|path|form，如果字段为path参数时，此值无效",
+  "tagTableTagTypeLabel": "标签类型",
+  "tagTableDescTagOptional": "字段是否可选",
+  "tagTableDescTagDefaultValue": "默认值",
+  "tagTableDescTagIsNumber": "是否为数值",
+  "tagTableDescTagEnumValue": "枚举值",
+  "tagTableDescTagRangeValue": "数据范围表达式，仅对数值类型有效",
+  "tagModalTry": "试一试",
+  "tagModalCopy": "复制模板",
   "formRequestBodyFieldEnumTitle": "枚举值",
   "formRequestBodyFieldEnumTooltip": "枚举值，多个以英文竖线 | 分割",
   "formRequestBodyFieldRangeTitle": "数据范围",
-  "formRequestBodyFieldRangeTooltip": "数据范围仅对数值型有效",
+  "formRequestBodyFieldRangeTooltip": "数据范围仅对数值型有效，-1代表无穷大",
   "formRequestBodyFieldBtnAdd": "增加字段",
   "formRequestBodyFieldBtnImport": "从 JSON 文本解析",
   "formResponseBodyModelTitle": "响应体 JSON 文本编辑",
@@ -61,5 +81,12 @@
   "btnCopyTips": "复制成功",
   "btnBuild": "开始转换",
   "tooltipFullScreen": "展开全屏",
-  "buildSuccess": "转换成功"
+  "buildSuccess": "转换成功",
+  "siderFooterFeedback": "建议反馈",
+  "siderFooterDoc": "官方文档",
+  "siderFooterLocale": "切换语言",
+  "menuTitle": "文件",
+  "menuItemOpen": "导入...",
+  "menuItemSave": "下载",
+  "btnClose": "关闭"
 }
