--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -3,8 +3,11 @@
   "logoText": "goctl web",
   "menuWelcome": "Welcome to goctl web",
   "api": "API",
-  "builder": "API Builder",
-  "builderPanelTitle": "API Builder",
+  "builder": "Builder",
+  "generator": "Generator",
+  "go": "Go",
+  "goTitle": "Golang code generator",
+  "builderPanelTitle": "Builder",
   "apiPanelTitle": "goctl API",
   "notFoundDescription": "Sorry, the page you visited does not exist.",
   "backHome": "Builder",
@@ -46,7 +49,7 @@
   "formRequestBodyFieldDefaultTitle": "DefaultValue",
   "formRequestBodyTagTemplateTitle": "TagTemplate",
   "formRequestBodyTagTemplateModalTitle": "Tag Template Detail",
-  "formLabelDetail": "Detail",
+  "formTagLabelDetail": "Custom tag?",
   "tagModalContent": "Label templates can easily generate personalized labels. Currently, the template supports the following variables:",
   "tagTableHeaderFieldName": "Name",
   "tagTableHeaderFieldType": "Type",
@@ -77,6 +80,7 @@
   "tipsInvalidJSON": "invalid json",
   "tipsInvalidJSONArray": "expected json object, got json array",
   "btnCopy": "Copy",
+  "btnSetting": "Configure",
   "btnClear": "Clear",
   "btnCopyTips": "Copied",
   "btnBuild": "Build",
