--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -4,6 +4,9 @@
   "menuWelcome": "欢迎来到 goctl web",
   "api": "API",
   "builder": "接口设计",
+  "generator": "生成器",
+  "go": "Go",
+  "goTitle": "Go 代码生成",
   "builderPanelTitle": "接口设计",
   "apiPanelTitle": "goctl API",
   "notFoundDescription": "很抱歉，你访问的网页不存在！",
@@ -45,8 +48,8 @@
   "formRequestBodyFieldOptionalTitle": "是否可选",
   "formRequestBodyFieldDefaultTitle": "默认值",
   "formRequestBodyTagTemplateTitle": "标签模板",
-  "formRequestBodyTagTemplateModalTitle": "标签模板详情",
-  "formLabelDetail": "详情",
+  "formRequestBodyTagTemplateModalTitle": "标签模板说明",
+  "formTagLabelDetail": "标签定制？",
   "formRequestBodyTagTemplatePlaceholder": "json:\"{{.name}}{{if .optional}},optional{{end}}{{if .defaultValue}},default={{.defaultValue}}{{end}}{{if .checkEnum}}{{if .enumValue}},options={{.enumValue}}{{end}}{{else}}{{if .rangeValue}},{{.rangeValue}}{{end}}{{end}}\"",
   "formRequestBodyTagTemplateTooltip": "标签模板，可以覆盖内置的标签模板规则，模板无需``包裹，填``内的文本模板即可，点击右侧图标查看详情",
   "tagModalContent": "标签模板可以方便生成个性化标签，目前模板支持以下变量：",
@@ -77,6 +80,7 @@
   "tipsInvalidJSON": "json 格式不合法",
   "tipsInvalidJSONArray": "期望 json 对象，实际是 json 数组",
   "btnCopy": "复制",
+  "btnSetting": "生成配置",
   "btnClear": "清空",
   "btnCopyTips": "复制成功",
   "btnBuild": "开始转换",
