--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -14,7 +14,7 @@
   "welcomeStart": "Start Now",
   "welcomeDoc": "Documents",
   "formServiceTitle": "ServiceName",
-  "formInputPrefix": "Please input",
+  "formInputPrefix": "Please input ",
   "formRegexTooltip": "must match pattern",
   "formRouteGroupTitle": "RouteGroup",
   "formRouteGroupTooltip": "After filling in, the generated code will group the files.",
@@ -93,5 +93,20 @@
   "menuItemOpen": "Open...",
   "menuItemSave": "Download...",
   "btnClose": "Close",
-  "model": "Model"
+  "model": "Model",
+  "mysqlHost": "Host",
+  "mysqlPort": "Port",
+  "mysqlUsername": "Username",
+  "mysqlPassword": "Password",
+  "mysqlSchema": "Schema",
+  "mysqlTable": "Table",
+  "mysqlConnection": "Connect",
+  "mysqlConnectionTitle": "Connection info",
+  "mysqlGenerateTitle": "Generation options",
+  "mysqlGenerate": "Generate",
+  "mysqlRemember": "Remember",
+  "mysqlCache": "UseCache",
+  "mysqlStrict": "StrictMode",
+  "mysqlStyle": "Format",
+  "mysqlIgnoreColumns": "IgnoreColumns"
 }
