--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -108,5 +108,8 @@
   "mysqlCache": "UseCache",
   "mysqlStrict": "StrictMode",
   "mysqlStyle": "Format",
-  "mysqlIgnoreColumns": "IgnoreColumns"
+  "mysqlIgnoreColumns": "IgnoreColumns",
+  "mysqlHostTooltip": "Database host address. The web page does not guarantee the security of database accounts and passwords. It is recommended to use localhost to connect to generate code. It is not recommended to be used in production environments.",
+  "mysqlStyleTooltip": "Generated file formatting symbols, the default is gozero, more formatting symbols can be referred to：https://go-zero.dev/en/docs/tutorials/cli/style",
+  "mysqlStrictTooltip": "In strict mode, signed data types are generated based on unsign"
 }
