--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -108,5 +108,8 @@
   "mysqlCache": "是否带缓存",
   "mysqlStrict": "是否严格模式",
   "mysqlStyle": "文件格式化符",
-  "mysqlIgnoreColumns": "忽略字段"
+  "mysqlIgnoreColumns": "忽略字段",
+  "mysqlHostTooltip": "数据库主机地址，网页不保证数据库账号，密码安全性，建议用 localhost 连接生成代码，不建议用于生产环境",
+  "mysqlStyleTooltip": "生成的文件格式化符号，默认为 gozero，更多格式化符号可参考：https://go-zero.dev/docs/tutorials/cli/style",
+  "mysqlStrictTooltip": "严格模式下会根据 unsign 生成带符号的数据类型"
 }
