--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -118,5 +118,9 @@
   "mysqlModalContent": "网页不保证数据库账号，密码安全性，请谨慎使用生产环境账号进行代码生成，建议按照如下流程进行代码生成：",
   "mysqlModalContent1": "1. 本地数据库创建表信息",
   "mysqlModalContent2": "2. 连接本地数据库进行代码生成",
-  "formSelectPrefix": "请选择"
+  "formSelectPrefix": "请选择",
+  "mysqlBtnRefresh": "刷新数据表",
+  "mysqlConnectError": "数据库连接失败",
+  "mysqlGetTablesError": "数据表获取失败",
+  "mysqlBtnReset": "重置"
 }
