Support mysql generation (#6)
Support mysql generation

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -3,15 +3,18 @@
   "logoText": "goctl web",
   "menuWelcome": "Welcome to goctl web",
   "api": "API",
-  "builder": "API Builder",
-  "builderPanelTitle": "API Builder",
+  "builder": "Builder",
+  "generator": "Generator",
+  "go": "Go",
+  "goTitle": "Golang code generator",
+  "builderPanelTitle": "Builder",
   "apiPanelTitle": "goctl API",
   "notFoundDescription": "Sorry, the page you visited does not exist.",
   "backHome": "Builder",
   "welcomeStart": "Start Now",
   "welcomeDoc": "Documents",
   "formServiceTitle": "ServiceName",
-  "formInputPrefix": "Please input",
+  "formInputPrefix": "Please input ",
   "formRegexTooltip": "must match pattern",
   "formRouteGroupTitle": "RouteGroup",
   "formRouteGroupTooltip": "After filling in, the generated code will group the files.",
@@ -46,7 +49,7 @@
   "formRequestBodyFieldDefaultTitle": "DefaultValue",
   "formRequestBodyTagTemplateTitle": "TagTemplate",
   "formRequestBodyTagTemplateModalTitle": "Tag Template Detail",
-  "formLabelDetail": "Detail",
+  "formTagLabelDetail": "Custom tag?",
   "tagModalContent": "Label templates can easily generate personalized labels. Currently, the template supports the following variables:",
   "tagTableHeaderFieldName": "Name",
   "tagTableHeaderFieldType": "Type",
@@ -77,6 +80,7 @@
   "tipsInvalidJSON": "invalid json",
   "tipsInvalidJSONArray": "expected json object, got json array",
   "btnCopy": "Copy",
+  "btnSetting": "Configure",
   "btnClear": "Clear",
   "btnCopyTips": "Copied",
   "btnBuild": "Build",
@@ -88,5 +92,40 @@
   "menuTitle": "File",
   "menuItemOpen": "Open...",
   "menuItemSave": "Download...",
-  "btnClose": "Close"
+  "btnClose": "Close",
+  "model": "Model",
+  "mysqlHost": "Host",
+  "mysqlPort": "Port",
+  "mysqlUsername": "Username",
+  "mysqlPassword": "Password",
+  "mysqlSchema": "Schema",
+  "mysqlTable": "Table",
+  "mysqlConnection": "Connect",
+  "mysqlConnectionTitle": "Connection info",
+  "mysqlGenerateTitle": "Generation options",
+  "mysqlGenerate": "Code Preview",
+  "mysqlDownload": "Download",
+  "mysqlRemember": "Remember",
+  "mysqlCache": "UseCache",
+  "mysqlStrict": "StrictMode",
+  "mysqlStyle": "Format",
+  "mysqlIgnoreColumns": "IgnoreColumns",
+  "mysqlIgnoreColumnsTooltip": "Ignore fields, SQL placeholders can be ignored for autopopulated fields",
+  "mysqlHostTooltip": "Database host address. The web page does not guarantee the security of database accounts and passwords. It is recommended to use dev server to connect to generate code. It is not recommended to be used in production environments.",
+  "mysqlStyleTooltip": "Generated file formatting symbols, the default is gozero, more formatting symbols can be referred to：https://go-zero.dev/en/docs/tutorials/cli/style",
+  "mysqlStrictTooltip": "In strict mode, signed data types are generated based on unsign",
+  "mysqlModalTitle": "Database connection tips",
+  "mysqlModalCheckTitle": "Do not show again",
+  "mysqlModalOkTitle": "Got it",
+  "mysqlModalContent": "The webpage does not guarantee the security of the database account and password. Please use the production environment account for code generation with caution. It is recommended to follow the following process for code generation:",
+  "mysqlModalContent1": "1. Local database creation table information",
+  "mysqlModalContent2": "2. Connect to a dev server database for code generation",
+  "formSelectPrefix": "Please select ",
+  "mysqlBtnRefresh": "Refresh",
+  "mysqlConnectError": "Connect error",
+  "mysqlGetTablesError": "Tables error",
+  "mysqlGenError": "Mysql generation error",
+  "mysqlBtnReset": "Reset",
+  "mysqlDownloadSuccess": "Download success",
+  "mysqlDownloadError": "Download failed"
 }
