--- a/web/src/locales/zh.json
+++ b/web/src/locales/zh.json
@@ -4,6 +4,9 @@
   "menuWelcome": "欢迎来到 goctl web",
   "api": "API",
   "builder": "接口设计",
+  "generator": "生成器",
+  "go": "Go",
+  "goTitle": "Go 代码生成",
   "builderPanelTitle": "接口设计",
   "apiPanelTitle": "goctl API",
   "notFoundDescription": "很抱歉，你访问的网页不存在！",
@@ -45,8 +48,8 @@
   "formRequestBodyFieldOptionalTitle": "是否可选",
   "formRequestBodyFieldDefaultTitle": "默认值",
   "formRequestBodyTagTemplateTitle": "标签模板",
-  "formRequestBodyTagTemplateModalTitle": "标签模板详情",
-  "formLabelDetail": "详情",
+  "formRequestBodyTagTemplateModalTitle": "标签模板说明",
+  "formTagLabelDetail": "定制标签",
   "formRequestBodyTagTemplatePlaceholder": "json:\"{{.name}}{{if .optional}},optional{{end}}{{if .defaultValue}},default={{.defaultValue}}{{end}}{{if .checkEnum}}{{if .enumValue}},options={{.enumValue}}{{end}}{{else}}{{if .rangeValue}},{{.rangeValue}}{{end}}{{end}}\"",
   "formRequestBodyTagTemplateTooltip": "标签模板，可以覆盖内置的标签模板规则，模板无需``包裹，填``内的文本模板即可，点击右侧图标查看详情",
   "tagModalContent": "标签模板可以方便生成个性化标签，目前模板支持以下变量：",
@@ -77,6 +80,7 @@
   "tipsInvalidJSON": "json 格式不合法",
   "tipsInvalidJSONArray": "期望 json 对象，实际是 json 数组",
   "btnCopy": "复制",
+  "btnSetting": "生成配置",
   "btnClear": "清空",
   "btnCopyTips": "复制成功",
   "btnBuild": "开始转换",
@@ -88,5 +92,40 @@
   "menuTitle": "文件",
   "menuItemOpen": "导入...",
   "menuItemSave": "下载",
-  "btnClose": "关闭"
+  "btnClose": "关闭",
+  "model": "数据库模型",
+  "mysqlHost": "主机",
+  "mysqlPort": "端口",
+  "mysqlUsername": "用户名",
+  "mysqlPassword": "密码",
+  "mysqlSchema": "数据库",
+  "mysqlTable": "数据表",
+  "mysqlConnection": "连接数据库",
+  "mysqlConnectionTitle": "数据库连接信息",
+  "mysqlGenerateTitle": "代码生成选项",
+  "mysqlGenerate": "生成代码预览",
+  "mysqlDownload": "下载代码",
+  "mysqlRemember": "记住账号",
+  "mysqlCache": "是否带缓存",
+  "mysqlStrict": "是否严格模式",
+  "mysqlStyle": "文件格式化符",
+  "mysqlIgnoreColumns": "忽略字段",
+  "mysqlIgnoreColumnsTooltip": "忽略字段，对于自动填充的字段可以忽略 sql 占位，多个以英文竖线|分割",
+  "mysqlHostTooltip": "数据库主机地址，网页不保证数据库账号，密码安全性，建议用开发机器连接生成代码，不建议用于生产环境",
+  "mysqlStyleTooltip": "生成的文件格式化符号，默认为 gozero，更多格式化符号可参考：https://go-zero.dev/docs/tutorials/cli/style",
+  "mysqlStrictTooltip": "严格模式下会根据 unsign 生成带符号的数据类型",
+  "mysqlModalTitle": "数据库连接提示",
+  "mysqlModalCheckTitle": "不再提示",
+  "mysqlModalOkTitle": "知道了",
+  "mysqlModalContent": "网页不保证数据库账号，密码安全性，请谨慎使用生产环境账号进行代码生成，建议按照如下流程进行代码生成：",
+  "mysqlModalContent1": "1. 本地数据库创建表信息",
+  "mysqlModalContent2": "2. 连接开发环境数据库进行代码生成",
+  "formSelectPrefix": "请选择",
+  "mysqlBtnRefresh": "刷新数据表",
+  "mysqlConnectError": "数据库连接失败",
+  "mysqlGetTablesError": "数据表获取失败",
+  "mysqlGenError": "代码生成失败",
+  "mysqlBtnReset": "重置",
+  "mysqlDownloadSuccess": "下载成功",
+  "mysqlDownloadError": "下载失败"
 }
